--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 body {
     text-align:left;
-    width:600px;
+    width:700px;
     height: 400px;
 }
 
@@ -9,16 +9,25 @@ button {
     height: 20px;
     padding: 1px;
     /* color:cadetblue; */
-    background-color: rgba(81, 142, 255, 0.945);
+    background-color: lightskyblue;
     border-width:0px;
     border-radius:1px;
     font-weight: bold;
     cursor:pointer;
 }
 
-label, input {
+input {
+    cursor:pointer;
+    position: absolute;
+    margin-left: 3px;
+}
+
+label {
     font-weight: bold;
     cursor:pointer;
+    display: block;
+    padding-left: 20px;
+    padding-top: 1px;
 }
 
 table.main-table {
@@ -30,12 +39,12 @@ table.main-table {
 td.main-table-option-td {
     min-width: 100px;
     width: 100px;
+    padding: 0;
 }
 
 td.main-table {
     vertical-align: top;
     border: 1px solid;
-    padding: 5px 5px;
 }
 
 table.inner-table {
@@ -51,8 +60,7 @@ td.inner-table {
     height: 20px;
 }
 
-textarea {
-    width: 100%;
-    height: 100%;
+td.main-table-example-td {
+    padding: 0px 5px;
 }
   
